--- a/ios/BookingApp/Info.plist
+++ b/ios/BookingApp/Info.plist
@@ -72,6 +72,8 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>BMDOHYEON_ttf.ttf</string>
+		<string>BMJUA_ttf.ttf</string>
 	</array>
 </dict>
 </plist>
